[package]
name = "count-xeno-the-4th"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.4.0" }
ark-bn254 = { version = "0.4.0" }
ark-ff = { version = "0.4.1", default-features = false, features = [
    "parallel",
    "asm",
] }
ark-groth16 = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
ark-serialize = { version = "0.4.1", default-features = false }
ark-std = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
ethers-core = { version = "2.0.7", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rand = { version = "0.8.4", features = ["getrandom"] }

snowball = { git = "https://github.com/ordian/snowball.git" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros"] }
ethers = "2.0.7"
anyhow = "1.0.86"
ark-bls12-381 = { version = "0.4.0", features = [
    "curve",
], default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
